Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
Qt Creator 2.0.1
-
None
-
Ubuntu 10.04 64 bit Qt 4.6.3 syimbian, gnupoc 1.15
-
3c62d2aae69d6236ce748fbee0f20d1ca5fb3447
Description
The QtCreator removes the ending slash from all enviroment variables.
On Linux using the symbian toolchain it causes the following problem during the make process:
[code]
bldmake bldfiles
ERROR: EPOCROOT must end with a slash
[/code]
If I run the building process (qmake, make with the same arguments) from a prompt by hand, it works fine.