Symbian: Make sure the EPOCROOT ends with / on Linux

Task-number: QTCREATORBUG-2445
Reviewed-by: Pawel Polanski